Fix scrollbars always visible on devices with scrollbars

--- a/web/style.css
+++ b/web/style.css
@@ -28,7 +28,7 @@ h1, h2, h3, h4, h5, h6, h7 {
 	
 	width: 25%;
 	max-height: 100%;
-	overflow: scroll;
+	overflow: auto;
 	
 	background-color: #111;
 	color: white;
@@ -71,7 +71,7 @@ h1, h2, h3, h4, h5, h6, h7 {
 	height: 100%;
 	max-height: 100%;
 	padding-bottom: 4px;
-	overflow: scroll;
+	overflow: auto;
 	
 	background-color: #EEE;
 	
